java script tasks

--- a/index.html
+++ b/index.html
@@ -7,23 +7,35 @@
     <title>Index page</title>
 </head>
 <body>
-    <div>
+
+<div>
         <ol>
-            <a href="file:///C:/Users/dell/javascript/sunday20-3-2022/task_one/task1.html" target="_blank">
-            <li>
-                task1
-            </li>
-           </a>
-           <li>
-               <a href="file:///C:/Users/dell/javascript/sunday20-3-2022/task_tow/task2.html" target="_blank">task2</a>
-           </li>
-           <li>
-            <a href="file:///C:/Users/dell/javascript/sunday20-3-2022/task_three/task3.html" target="_blank">task3</a>
-        </li>
-        <li>
-            <a href="file:///C:/Users/dell/javascript/sunday20-3-2022/task_four/task4.html" target="_blank">task4</a>
-        </li>
+            <li> sunday20-3-2022</li>
+            <ol>
+                <li>
+                    <a href="file:///C:/Users/dell/javascript/sunday20-3-2022/task_one/task1.html" target="_blank"> task1 </a>
+                </li> 
+                <li>
+                    <a href="file:///C:/Users/dell/javascript/sunday20-3-2022/task_tow/task2.html" target="_blank">task2</a>
+                </li>
+                <li>
+                    <a href="file:///C:/Users/dell/javascript/sunday20-3-2022/task_three/task3.html" target="_blank">task3</a>
+                </li>
+                <li>
+                     <a href="file:///C:/Users/dell/javascript/sunday20-3-2022/task_four/task4.html" target="_blank">task4</a>
+                </li>
+            </ol>
         </ol>
-    </div>
+        
+        <ol>
+            <li>monday21-3-2022</li>
+             <ol>
+                 <li>
+                     <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task1.html" target="_blank">task1</a>
+                 </li>
+             </ol>
+        </ol>
+</div>
+
 </body>
 </html>
