--- a/wednesday23-3-2022/task5/index.html
+++ b/wednesday23-3-2022/task5/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Exercise #5 Input check</title>
 </head>
 <body>
+    <div class="form">
+        <form action="">
+        <label for="pass">Password(min 6 characters): </label>
+        <input type="password" min="6" max="12" id="pass"> <div class="err"></div>
+        <br><br>
+        <label for="re_pass">Repeat password: </label>
+        <input type="password" min="6" max="12" id="re_pass"><div class="err"></div>
+        <br><br>
+        <input type="submit" id="sub" style="display:hidden;">
+    </form>
+    </div>
     
 </body>
+<script src="app.js"></script>
 </html>
