--- a/wednesday23-3-2022/task5/index.html
+++ b/wednesday23-3-2022/task5/index.html
@@ -14,7 +14,7 @@
         <input type="password" min="6" max="12" id="pass"> <div class="err"></div>
         <br><br>
         <label for="re_pass">Repeat password: </label>
-        <input type="password" min="6" max="12" id="re_pass"><div class="err"></div>
+        <input type="password" min="6" max="12" id="re_pass" onchange=""><div class="err"></div>
         <br><br>
         <input type="submit" id="sub" style="display:hidden;">
     </form>
