--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                          <li> thuresday 23-3-2022</li>
                          <ol>
                              <li>
-                                 <a href="file:///C:/Users/dell/javascript/thuresday24-3-2022/task1/index.html" target="_blank"></a>
+                                 <a href="file:///C:/Users/dell/javascript/thuresday24-3-2022/task1/index.html" target="_blank">task1</a>
                              </li>
                          </ol>
 
