--- a/index.html
+++ b/index.html
@@ -5,10 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index page</title>
+    <style>
+        body{
+            background-color: darkgoldenrod;
+            color: thistle;
+            display: flex;
+            margin: 0%;
+            padding: 0%;
+        }
+        .con{
+             flex-direction: column;
+             margin-left: 20%;
+        }
+        li{
+           list-style-type: none;
+        }
+        a{
+           text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 
-<div>
+<div class="con">
         <ol>
             <li> sunday20-3-2022</li>
             <ol>
@@ -31,20 +50,26 @@
             <li>monday21-3-2022</li>
              <ol>
                  <li>
-                     <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task1.html" target="_blank">task1</a>
+                     <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task1/task1.html" target="_blank">task1</a>
                  </li>
                  <li>
-                    <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task2.html" target="_blank">task2</a>
+                    <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task2/task2.html" target="_blank">task2</a>
                 </li>
                 <li>
-                    <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task1.html" target="_blank">task3</a>
+                    <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task3/index.html" target="_blank">task3</a>
                 </li>
                 <li>
-                    <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task1.html" target="_blank">task4</a>
+                    <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task4/task4.html" target="_blank">task4</a>
+                </li>
+                <li>
+                    <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task5/task5.html" target="_blank">task5</a>
+                </li>
+                <li>
+                    <a href="file:///C:/Users/dell/javascript/monday21-3-2022/task6/task6.html" target="_blank">task6</a>
                 </li>
              </ol>
            
-                 <li>wednesday</li>
+                 <li>wednesday 23-3-2022</li>
                  <ol>
                      <li>
                          <a href="file:///C:/Users/dell/javascript/wednesday23-3-2022/task1/index.html" target="_blank">task1</a>
@@ -70,7 +95,7 @@
                         </li>
                  </ol>
             
-                         <li> thuresday 23-3-2022</li>
+                         <li> thuresday 24-3-2022</li>
                          <ol>
                              <li>
                                  <a href="file:///C:/Users/dell/javascript/thuresday24-3-2022/task1/index.html" target="_blank">task1</a>
