--- a/monday21-3-2022/task1/task1.html
+++ b/monday21-3-2022/task1/task1.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="task1.js"></script>
+    <title>array</title>
+    
 </head>
 <body>
     
 </body>
+<script src="task1.js"></script>
 </html>
