--- a/index.html
+++ b/index.html
@@ -102,7 +102,12 @@
                              </li>
                          </ol>
                          
-
+                   <li>sunday 28-3-2022</li>
+                   <ol>
+                       <li>
+                           <a href="file:///C:/Users/dell/javascript/sunday28-3-2022/miniproject/index.html" target="_blank">mini project</a>
+                       </li>
+                   </ol>
         </ol>
 </div>
 
