--- a/sunday28-3-2022/miniproject/index.html
+++ b/sunday28-3-2022/miniproject/index.html
@@ -32,7 +32,12 @@
         <div class="divTable">
           <table id="tableCon">
             <thead id="headTa">
-               
+                <tr>
+                    <td>User Name</td>
+                    <td>Type of Device</td>
+                    <td>The Price</td>
+                    <td>divice condition</td>
+                </tr>
             </thead>
             <tbody id="boadTa"></tbody>
             <tfoot id="footTa"></tfoot>
