--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
                    <li>tuesday 29-3-2022</li>
                    <ol>
                        <li>
-                           <a href="./tuesday29-3-2022/index.html" target="_blank">task1</a>
+                           <a href="./tuesday29-3-2022/task1/index.html" target="_blank">task1</a>
+                       </li>
+                       <li>
+                           <a href="./tuesday29-3-2022/task2/index.html" target="_blank">task2</a>
                        </li>
                    </ol>
         </ol>
