--- a/wednesday23-3-2022/task5/index.html
+++ b/wednesday23-3-2022/task5/index.html
@@ -8,8 +8,8 @@
     <title>Exercise #5 Input check</title>
 </head>
 <body>
-    <div class="form">
-        <form action="">
+    <div class="container">
+        <form action="" class="formStyle">
         <label for="pass">Password(min 6 characters): </label>
         <input type="password" min="6" max="12" id="pass"> <div class="err"></div>
         <br><br>
