--- a/thuresday24-3-2022/task1/index.html
+++ b/thuresday24-3-2022/task1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>array of object</title>
 </head>
 <body>
     <p id="t1"></p>
@@ -16,8 +16,6 @@
     <p id="t4"></p>
     <hr>
     <p id="t5"></p>
-    <hr>
-    <p id="t6"></p>
     <hr>
     <p id="t7"></p>
     <hr>
