--- a/sunday27-3-2022/miniproject/index.html
+++ b/sunday27-3-2022/miniproject/index.html
@@ -32,7 +32,7 @@
         <div class="divTable">
           <table id="tableCon">
             <thead id="headTa">
-                <tr>
+                <tr class="con">
                     <td>User Name</td>
                     <td>Type of Device</td>
                     <td>The Price</td>
