--- a/wednesday30-3-2022/index.html
+++ b/wednesday30-3-2022/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>regestration form</title>
 </head>
 <body>
-    <form action="">
-        <label for="f_name">first name:</label><input type="text" name="fname" id="f_name">
-        <label for="L_name">last name:</label><input type="text" name="lname" id="L_name">
-        <label for="bdate">birth date:</label><input type="date" name="birthdate" id="bdate">
-        <label for="email">email:</label><input type="email" name="email" id="email">
-        <label for="email">email:</label><input type="email" name="email" id="email">
-        <label for="email">email:</label><input type="email" name="email" id="email">
-        <label for="email">email:</label><input type="email" name="email" id="email">
-         <input type="button">
-        
+    <div class="container">
+    <form action="" id="regestForm" >
+        <label for="f_name">first name:</label><input type="text" name="fname" id="f_name"> <br><br>
+        <label for="L_name">last name:</label><input type="text" name="lname" id="L_name"><br><br>
+        <label for="bdate">birth date:</label><input type="date" name="birthdate" id="bdate"><br><br>
+        <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
+        <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
+        <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
+        <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
+         <input type="button" value="Submit" id="sub">
     </form>
+   </div>
 </body>
 <script src="app.js"></script>
 </html>
