--- a/index.html
+++ b/index.html
@@ -119,8 +119,17 @@
                    <li>tuesday 29-3-2022</li>
                    <ol>
                        <li>
-                           <a href="./tuesday29-3-2022/task2/index.html" target="_blank">task1</a>
+                           <a href="./tuesday29-3-2022/task1/index.html" target="_blank">task1</a>
                        </li>
+                       <li>
+                        <a href="./tuesday29-3-2022/task2/index.html" target="_blank">task2</a>
+                    </li>
+                   </ol>
+                   <li>Wednesday 30-3-2022</li>
+                   <ol>
+                    <li>
+                        <a href="./wednesday30-3-2022/index.html" target="_blank">task</a>
+                    </li>
                    </ol>
         </ol>
 </div>
