--- a/wednesday30-3-2022/index.html
+++ b/wednesday30-3-2022/index.html
@@ -14,9 +14,9 @@
         <label for="L_name">last name:</label><input type="text" name="lname" id="L_name"><br><br>
         <label for="bdate">birth date:</label><input type="date" name="birthdate" id="bdate"><br><br>
         <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
-        <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
-        <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
-        <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
+        <label for="email2">re-enter email:</label><input type="email" name="email" id="email2"><br><br>
+        <label for="email">password:</label><input type="password" name="email" id="password1"><br><br>
+        <label for="email">re-enter password:</label><input type="password" name="email" id="password2"><br><br>
          <input type="button" value="Submit" id="sub">
     </form>
    </div>
