--- a/tuesday29-3-2022/task2/index.html
+++ b/tuesday29-3-2022/task2/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>task2</title>
+
 </head>
 <body>
     <section>
-        <form action="" id="mobForm">
+        <form action="" id="Form">
                     <fieldset>
                       <legend>Location IQ</legend>
                     <label for="" id="locName">Location Name</label>
