--- a/wednesday30-3-2022/index.html
+++ b/wednesday30-3-2022/index.html
@@ -10,13 +10,27 @@
 <body>
     <div class="container">
     <form action="" id="regestForm" >
-        <label for="f_name">first name:</label><input type="text" name="fname" id="f_name"> <br><br>
-        <label for="L_name">last name:</label><input type="text" name="lname" id="L_name"><br><br>
-        <label for="bdate">birth date:</label><input type="date" name="birthdate" id="bdate"><br><br>
-        <label for="email">email:</label><input type="email" name="email" id="email"><br><br>
-        <label for="email2">re-enter email:</label><input type="email" name="email" id="email2"><br><br>
-        <label for="email">password:</label><input type="password" name="email" id="password1"><br><br>
-        <label for="email">re-enter password:</label><input type="password" name="email" id="password2"><br><br>
+        <label for="f_name">first name:</label>
+        <input type="text" name="fname" id="f_name" placeholder="Enter your First name"> <br><br>
+
+        <label for="L_name">last name:</label>
+        <input type="text" name="lname" id="L_name" placeholder="Enter your Last name"><br><br>
+
+        <label for="bdate">birth date:</label>
+        <input type="text" name="birthdate" id="bdate" placeholder="dd/mm/yy"><br><br>
+
+        <label for="email">email:</label>
+        <input type="email" name="email" id="email" placeholder="example@gmail.com"><br><br>
+
+        <label for="email2">re-enter email:</label>
+        <input type="email" name="email" id="email2" placeholder="example@gmail.com"><br><br>
+
+        <label for="email">password:</label>
+        <input type="password" name="pass" id="password1" placeholder="******" autocomplete="new-password"><br><br>
+
+        <label for="email">re-enter password:</label>
+        <input type="password" name="repass" id="password2" placeholder="******" autocomplete="new-password"><br><br>
+
          <input type="button" value="Submit" id="sub">
     </form>
    </div>
