--- a/wednesday30-3-2022/index.html
+++ b/wednesday30-3-2022/index.html
@@ -31,7 +31,7 @@
         <label for="email">re-enter password:</label>
         <input type="password" name="repass" id="password2" placeholder="******" autocomplete="new-password"><br><br>
 
-         <input type="button" value="Submit" id="sub">
+         <input type="submit" value="Submit" id="sub">
     </form>
    </div>
 </body>
