--- a/wednesday30-3-2022/index.html
+++ b/wednesday30-3-2022/index.html
@@ -11,25 +11,25 @@
     <div class="container">
     <form action="" id="regestForm" >
         <label for="f_name">first name:</label>
-        <input type="text" name="fname" id="f_name" placeholder="Enter your First name" ><span id="fname-error"></span><br><br>
+        <input type="text" name="fname" id="f_name" ><span id="fname-error"></span><br><br>
 
         <label for="L_name">last name:</label>
-        <input type="text" name="lname" id="L_name" placeholder="Enter your Last name" ><br><br>
+        <input type="text" name="lname" id="L_name"><br><br>
 
         <label for="bdate">birth date:</label>
-        <input type="date" name="birthdate" id="bdate" placeholder="dd/mm/yy" > <span id="bdate-error"></span><br><br>
+        <input type="date" name="birthdate" id="bdate" > <span id="bdate-error"></span><br><br>
 
         <label for="email">email:</label>
-        <input type="email" name="email" id="email" placeholder="example@gmail.com" ><br><br>
+        <input type="email" name="email" id="email"><br><br>
 
         <label for="email2">re-enter email:</label>
-        <input type="email" name="email2" id="email2" placeholder="example@gmail.com" > <span id="password-error"></span><br><br>
+        <input type="email" name="email2" id="email2"> <span id="password-error"></span><br><br>
 
         <label for="password1">password:</label>
-        <input type="password" name="pass" id="password1" placeholder="******" autocomplete="new-password" ><br><br>
+        <input type="password" name="pass" id="password1"  autocomplete="new-password" ><br><br>
 
         <label for="password2">re-enter password:</label>
-        <input type="password" name="repass" id="password2" placeholder="******" autocomplete="new-password" ><br><br>
+        <input type="password" name="repass" id="password2" autocomplete="new-password" ><br><br>
 
          <button type="submit" id="sub">submit</button>
          <button id="welcoming"><a href="index2.html" >Welcome </a></button>
