--- a/wednesday30-3-2022/index.html
+++ b/wednesday30-3-2022/index.html
@@ -17,7 +17,7 @@
         <input type="text" name="lname" id="L_name"><br><br>
 
         <label for="bdate">birth date:</label>
-        <input type="date" name="birthdate" id="bdate" > <span id="bdate-error"></span><br><br>
+        <input type="date" name="bdate" id="bdate" > <span id="bdate-error"></span><br><br>
 
         <label for="email">email:</label>
         <input type="email" name="email" id="email"><br><br>
@@ -26,10 +26,10 @@
         <input type="email" name="email2" id="email2"> <span id="password-error"></span><br><br>
 
         <label for="password1">password:</label>
-        <input type="password" name="pass" id="password1"  autocomplete="new-password" ><br><br>
+        <input type="password" name="password" id="password1"  autocomplete="new-password" ><br><br>
 
         <label for="password2">re-enter password:</label>
-        <input type="password" name="repass" id="password2" autocomplete="new-password" ><br><br>
+        <input type="password" name="repassword" id="password2" autocomplete="new-password" ><br><br>
 
          <button type="submit" id="sub">submit</button>
          <button id="welcoming"><a href="index2.html" >Welcome </a></button>
