--- a/wednesday30-3-2022/index2.html
+++ b/wednesday30-3-2022/index2.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>showing the validation message</title>
     <link rel="stylesheet" href="style.css">
+    <title>Welcome</title>
 </head>
 <body>
-        <div class="container1">
-        <h1 style="color: purple;"> Data from the Local Storage</h1>
-        <p id="show" style="color: palevioletred;"></p>
+    <div id="show"> 
+    <h2 style="display: inline;">Welcome <h2 style="display: inline;" id="welcomeFullName"></h2></h2>
+    <h2 id="welcomeEmail"></h2>
+    <h2> Enjoy your time!!</h2>
+   </div>
 </body>
-<script src="app1.js"></script>
+<script src="app2.js"></script>
 </html>
